fixed style bug with part of the social icon was clipped

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -765,6 +765,8 @@
 	vertical-align: middle;
 	background-color: #999999;
 	color: #ffffff;
+	box-sizing: content-box;
+	padding: 1px;
 }
 .wc-shortcodes-social-icons li i.fa-facebook { background-color: #305999; }
 .wc-shortcodes-social-icons li i.fa-google-plus { background-color: #ee7321; }
